--- a/assets/calc_style.css
+++ b/assets/calc_style.css
@@ -13,6 +13,12 @@ h1 {
     margin: 0;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #calculator {
     width: auto;
     height: auto;
